class User:
    def __init__(self, name: str, Password: str):
        self.name = name
        self.Password = Password
